# colonyx

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  TODO.md  hello.py  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: CI.yml  docs-deploy.yml
colonyx/: __init__.py  _colonyx.py  auto.py  base.py  benchmarks.py  cli.py  datasets.py  metrics.py  utils.py
docs/: NOTE.md  TODO.md  algorithms.md  api.md  autocolony-api.md  cli.md  examples.md  getting-started.md  index.md  release.md  rust.md
docs/algorithms/: abc.md  aco-variants.md  aco.md  advanced.md  ba.md  bfo.md  binary-pso.md  cmaes.md  cs.md  de.md  fa.md  gso.md  gwo.md  mopso.md  nsga2.md  permutation-ga.md  pso.md  sa.md
scripts/: README.md  build-release.sh  check-release.sh  publish-crates.sh  publish-pypi.sh
src/: bindings.rs  lib.rs
src/algorithms/: abc.rs  aco.rs  advanced.rs  base.rs  continuous.rs  mod.rs  pso.rs
src/core/: bounds.rs  mod.rs  problem.rs  solution.rs
tests/: test_abc.py  test_aco.py  test_advanced_algorithms.py  test_base.py  test_benchmarking.py  test_benchmarks.py  test_bfo.py  test_cmaes.py  test_cs_ba_gso.py  test_de.py  test_fa.py  test_gwo.py  test_metrics.py  test_pso.py  test_sa.py  test_sklearn_compat.py  test_two_opt.py  test_utils.py  test_visualization.py
