[package]
name = "colonyx"
version = "0.1.0"
edition = "2021"
description = "Rust-backed swarm intelligence optimization for Python"
license = "MIT"
readme = "README.md"
repository = "https://github.com/minhld/colonyx"
homepage = "https://minhld.github.io/colonyx/"
documentation = "https://minhld.github.io/colonyx/"
keywords = ["optimization", "swarm", "python", "pyo3"]
categories = ["algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_colonyx"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
rand = "0.8"
