[package]
name = "colonyx"
version = "0.2.0"
edition = "2021"
description = "Rust-backed swarm intelligence optimization for Python"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MinLee0210/colonyx"
homepage = "https://minlee0210.github.io/colonyx/"
documentation = "https://minlee0210.github.io/colonyx/"
keywords = ["optimization", "swarm", "python", "pyo3"]
categories = ["algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "colonyx"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
rand = "0.8"
