[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "colonyx"
requires-python = ">=3.8"
description = "A Pythonic toolkit for Ant Colony, Particle Swarm, and Bee Colony optimization — written in Rust for high performance, designed for real-world use."
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.0",
]


[tool.maturin]
features = ["pyo3/extension-module"]
# Build the Rust extension as a submodule inside the colonyx package
# (colonyx/_colonyx.so), re-exported by colonyx/__init__.py.
module-name = "colonyx._colonyx"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
