[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "colonyx"
requires-python = ">=3.8"
description = "A Pythonic toolkit for Ant Colony, Particle Swarm, and Bee Colony optimization — written in Rust for high performance, designed for real-world use."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Minh, Le Duc", email = "minh.leduc.0210@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.0",
]
keywords = ["optimization", "swarm", "rust", "pyo3", "sklearn"]

[project.urls]
Homepage = "https://minlee0210.github.io/colonyx/"
Documentation = "https://minlee0210.github.io/colonyx/"
Repository = "https://github.com/MinLee0210/colonyx"
Issues = "https://github.com/MinLee0210/colonyx/issues"

[project.scripts]
colonyx = "colonyx.cli:main"


[tool.maturin]
features = ["pyo3/extension-module"]
# Build the Rust extension as a submodule inside the colonyx package
# (colonyx/_colonyx.so), re-exported by colonyx/__init__.py.
module-name = "colonyx._colonyx"
python-source = "."

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
